--- a/phase4/Makefile
+++ b/phase4/Makefile
@@ -12,7 +12,7 @@ PHASE3LIB = patrickphase3
 # PHASE2LIB = patrickphase2debug
 # PHASE3LIB = patrickphase3debug
 
-HDRS = libuser.h phase1.h phase2.h phase3.h phase4.h
+HDRS = libuser.h phase1.h phase2.h phase3.h phase4.h driver.h
 
 INCLUDE = ./usloss/include
 
@@ -36,8 +36,8 @@ TESTDIR = testcases
 
 TESTS = test00 test01 test02 test03
 #test04 test05 test06 test07 test08 \
-        test09 test10 test11 test12 test13 test14 test15 test16 test17 \
-        test18 test19 test20 test21 test22 test23 test24 test25
+        # test09 test10 test11 test12 test13 test14 test15 test16 test17 \
+        # test18 test19 test20 test21 test22 test23 test24 test25
 
 LIBS = -lusloss -l$(PHASE1LIB) -l$(PHASE2LIB) -lphase4
 
