--- a/phase4/Makefile
+++ b/phase4/Makefile
@@ -39,7 +39,7 @@ TESTS = test00 test01 test02 test03
         # test09 test10 test11 test12 test13 test14 test15 test16 test17 \
         # test18 test19 test20 test21 test22 test23 test24 test25
 
-LIBS = -lusloss -l$(PHASE1LIB) -l$(PHASE2LIB) -lphase4
+LIBS = -lusloss -l$(PHASE1LIB) -l$(PHASE2LIB) -l$(PHASE3LIB) -lphase4
 
 $(TARGET):	$(COBJS)
 		$(AR) -r $@ $(COBJS) 
