final commit phase4

--- a/phase4/term0.in
+++ b/phase4/term0.in
@@ -26,3 +26,16 @@ last line
 last line
 last line
 last line
+last line
+last line
+last line
+last line
+last line
+last line
+last line
+last line
+last line
+last line
+last line
+last line
+last line
