--- a/phase4/term1.in
+++ b/phase4/term1.in
@@ -26,3 +26,16 @@ last line
 last line
 last line
 last line
+last line
+last line
+last line
+last line
+last line
+last line
+last line
+last line
+last line
+last line
+last line
+last line
+last line
